# claudetopia

./: README.md
claudepak/: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  claudepak
claudepak/test-export/: create-package.sh
claudepak/test-export/claude-config-marksconfig/: README.md  claude.json  claude_desktop_config.json  metadata.json
claudepak/test-export/claude-config-marksconfig/commands/: plan.md  research.md
decision-simulator/: CLAUDE.md  agent.py  fastagent.config.yaml  fastagent.jsonl  main.py  pyproject.toml
decision-simulator/src/decision_simulator/: __init__.py  cli.py  simulator.py
decision-simulator/src/decision_simulator/agent/: __init__.py  agent.py  interaction.py  provider.py  runtime.py
decision-simulator/src/decision_simulator/cli/: __init__.py  admin_menu.py  main_menu.py  persona_menu.py  scenario_menu.py  simulation_menu.py
decision-simulator/src/decision_simulator/personas/: __init__.py  persona.py
decision-simulator/src/decision_simulator/utils/: __init__.py  error_handler.py
